clusters/constellation/apps/spuxx-dev/astro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spuxx-astro
  namespace: spuxx-dev
spec:
  selector:
    app: spuxx-astro
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
